[metadata]
name = templater
version = 0.1.0
author = Ekansh Agrawal
author_email = agrawalekansh@berkely.edu
description = utility tool the generates code files from user-defined templates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/h3x4g0ns/templater/tree/main
keywords = python, template, cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
